force-app/main/default/objects/Service_Center__c/fields/Avg_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Avg_Service_Time__c</fullName>
    <label>Avg Service Time(Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>