force-app/main/default/objects/Service_Center__c/fields/Current_Queue__c.field-meta.xml
<CustomField>
    <fullName>Current_Queue__c</fullName>
    <label>Current Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>