force-app/main/default/objects/Service_Center__c/fields/Total_Counters__c.field-meta.xml
<CustomField>
    <fullName>Total_Counters__c</fullName>
    <label>Total Counters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>