force-app/main/default/objects/Service_Center__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Parlor</fullName>
            </value>
            <value>
                <fullName>Ration Shop</fullName>
            </value>
            <value>
                <fullName>Government Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>