force-app/main/default/objects/Service_Center__c/recordTypes/Government_Office.recordType-meta.xml
<RecordType>
    <fullName>Government_Office</fullName>
    <active>true</active>
    <label>Government Office</label>
</RecordType>