force-app/main/default/objects/Service_Center__c/recordTypes/Parlor.recordType-meta.xml
<RecordType>
    <fullName>Parlor</fullName>
    <active>true</active>
    <label>Parlor</label>
</RecordType>