force-app/main/default/objects/Service_Center__c/recordTypes/Ration_Shop.recordType-meta.xml
<RecordType>
    <fullName>Ration_Shop</fullName>
    <active>true</active>
    <label>Ration Shop</label>
</RecordType>